# djangoTutorialProject

./: .pre-commit-config.yaml  README.md  dev_requirements.txt  manage.py  pyproject.toml
.github/workflows/: ruff.yml
djangoTutorialProject/: asgi.py  settings.py  urls.py  wsgi.py
garden/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
garden/migrations/: 0001_initial.py  0002_plant.py  0003_remove_plant_garden_bed_plant_garden_bed.py
garden/templates/: base.html  garden_detail.html  garden_list.html  home.html
garden/tests/: test_basic.py
posts/: admin.py  models.py  urls.py  views.py
posts/migrations/: 0001_initial.py
posts/templates/: post_detail.html
